--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             2021 NFL Regular Season Results
         </h3>
         <p style="text-align: center; font-family: sans-serif; font-size: 16px; margin-bottom: 2%">
-            Visualizing the recent 2021 NFL Schedule. Within each game the final score for each team is encoded as the size for each team rectangle.
+            Visualizing the recent 2021 NFL season. Within each game the final score for each team is encoded as the size for each team rectangle.
         </p>
         <div id="chart"></div>
         <script type="module" src="graph.js"></script>
