--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
         <h2 style="text-align: center; margin-top: 1%">
             2021 NFL Regular Season Results
         </h3>
-        <p style="text-align: center; font-family: sans-serif; font-size: 16px; margin-bottom: 2%">
-            Visualizing the recent 2021 NFL season. Within each game the final score for each team is encoded as the size for each team rectangle.
+        <p style="text-align: center; font-family: sans-serif; font-size: 16px">
+            Visualizing the recent 2021 NFL season. Within each game the final score for each team is encoded as the size for each team rectangle. Either select your team from the dropdown or simply hover your mouse over a game!
         </p>
+        <select id="team-form" class="form-select" aria-label="Default select example" style="margin-left: 5%; margin-bottom: 1%">
+            <option selected>Choose Your Team</option>
+        </select>
         <div id="chart"></div>
         <script type="module" src="graph.js"></script>
     </div>
