--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>2021 NFL Regular Season Results</title>
     <script src="https://cdn.jsdelivr.net/npm/underscore@1.13.4/underscore-umd-min.js"></script>
     <script src="d3.v7.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -13,15 +14,18 @@
     <div>
         <h2 style="text-align: center; margin-top: 1%">
             2021 NFL Regular Season Results
-        </h3>
-        <p style="text-align: center; font-family: sans-serif; font-size: 16px">
-            Visualizing the recent 2021 NFL season. Within each game the final score for each team is encoded as the size for each team rectangle. Either select your team from the dropdown or simply hover your mouse over a game!
-        </p>
-        <select id="team-form" class="form-select" aria-label="Default select example" style="margin-left: 5%; margin-bottom: 1%">
-            <option selected>Choose Your Team</option>
-        </select>
-        <div id="chart"></div>
-        <script type="module" src="graph.js"></script>
+            </h3>
+            <p style="text-align: center; font-family: sans-serif; font-size: 16px">
+                Visualizing the recent 2021 NFL season. Within each game the final score for each team is encoded as the
+                size for each team rectangle. Either select your team from the dropdown or simply hover your mouse over
+                a game!
+            </p>
+            <select id="team-form" class="form-select" aria-label="Default select example"
+                style="margin-left: 5%; margin-bottom: 1%">
+                <option selected>Choose Your Team</option>
+            </select>
+            <div id="chart"></div>
+            <script type="module" src="graph.js"></script>
     </div>
 </body>
 
